k8s/backend-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: payrollflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: acrpayrollflowyao.azurecr.io/payrollflow/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 45231
          volumeMounts:
            - name: payroll-data
              mountPath: /app/data

            # Azure Key Vault via Secrets Store CSI
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

      volumes:
        - name: payroll-data
          persistentVolumeClaim:
            claimName: payroll-data

        # Déclenche le montage des secrets depuis Azure Key Vault
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: payrollflow-keyvault

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: payrollflow
spec:
  selector:
    app: auth
  ports:
    - port: 45231
      targetPort: 45231

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr
  namespace: payrollflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr
  template:
    metadata:
      labels:
        app: hr
    spec:
      containers:
        - name: hr
          image: acrpayrollflowyao.azurecr.io/payrollflow/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 45232
          volumeMounts:
            - name: payroll-data
              mountPath: /app/data

      volumes:
        - name: payroll-data
          persistentVolumeClaim:
            claimName: payroll-data

---
apiVersion: v1
kind: Service
metadata:
  name: hr
  namespace: payrollflow
spec:
  selector:
    app: hr
  ports:
    - port: 45232
      targetPort: 45232

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payroll
  namespace: payrollflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payroll
  template:
    metadata:
      labels:
        app: payroll
    spec:
      containers:
        - name: payroll
          image: acrpayrollflowyao.azurecr.io/payrollflow/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 45233
          volumeMounts:
            - name: payroll-data
              mountPath: /app/data

      volumes:
        - name: payroll-data
          persistentVolumeClaim:
            claimName: payroll-data

---
apiVersion: v1
kind: Service
metadata:
  name: payroll
  namespace: payrollflow
spec:
  selector:
    app: payroll
  ports:
    - port: 45233
      targetPort: 45233

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time
  namespace: payrollflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
        - name: time
          image: acrpayrollflowyao.azurecr.io/payrollflow/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 45234
          volumeMounts:
            - name: payroll-data
              mountPath: /app/data

      volumes:
        - name: payroll-data
          persistentVolumeClaim:
            claimName: payroll-data

---
apiVersion: v1
kind: Service
metadata:
  name: time
  namespace: payrollflow
spec:
  selector:
    app: time
  ports:
    - port: 45234
      targetPort: 45234
