k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: payrollflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: acrpayrollflowyao.azurecr.io/payrollflow/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 45218
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: payrollflow
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 45218
      targetPort: 45218
