k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payrollflow
  namespace: payrollflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  tls:
    - hosts:
        - payrollflow-yao.francecentral.cloudapp.azure.com
      secretName: payrollflow-tls

  rules:
    - host: payrollflow-yao.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
